redesign on template 2 and changed index.html to the new design

--- a/components/template-2.html
+++ b/components/template-2.html
@@ -9,7 +9,6 @@
 	</head>
 	<body class="text-white text-roboto">
 		<div class="min-h-screen bg-[#0b0f2a] bg-[radial-gradient(circle_at_top_right,_rgba(0,159,183,0.3)_0%,_transparent_60%),_radial-gradient(circle_at_bottom_left,_rgba(0,159,183,0.3)_0%,_transparent_60%)]">
-			<!-- NAVIGATION -->
 		<div id="hero" class="w-full h-dvh relative">
             <nav class="">
                 <div class="w-full p-4 flex items-center justify-between">
@@ -332,7 +331,7 @@
 		</div>
 		
 
-		<footer class="text-white w-full p-4 pt-24">
+		<footer class="text-white w-full p-4 md:mt-24 mt-10">
             <div class="max-w-6xl mx-auto border p-6 rounded md:flex block justify-between bg-indigo-950 border-indigo-900">
                 <div>
                     <div class="flex items-center space-x-4">
@@ -373,6 +372,6 @@
             </div>
         </footer>
 		</div>
-		
+		<script src="../assets/js/main.js"></script>
 	</body>
 </html>
