kalimutan ko ano nilagay ko hahaha basta sa design yan

--- a/components/template.html
+++ b/components/template.html
@@ -29,6 +29,9 @@
                             <a href="#" class="hidden md:block">Learn Now</a>
                         </li>
                         <li>
+                            <a href="#" class="hidden md:block">Contact Us</a>
+                        </li>
+                        <li>
                             <button class="cursor-pointer p-2 rounded" id="menu-toggle">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
@@ -61,6 +64,9 @@
                                         </li>
                                         <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Learn Now</a>
+                                        </li>
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
+                                            <a href="#">Contact Us</a>
                                         </li>
                                     </ul>
                                 </li>
