update: side bar navigations, max width in hero section, text justify in container

--- a/components/template-2.html
+++ b/components/template-2.html
@@ -37,6 +37,8 @@
                         </li>
                     </ul>
                 </div>
+
+                <!-- SIDEBAR -->
                 <div id="sidebar" class="fixed inset-y-0 overflow-y-auto left-0 w-64 bg-[#111436] text-white transform -translate-x-full transition-transform duration-300 [&::-webkit-scrollbar]:w-1
                 [&::-webkit-scrollbar-track]:bg-gray-100
                 [&::-webkit-scrollbar-thumb]:bg-gray-300
@@ -72,7 +74,7 @@
     
                         <li class="px-4">
                             <ul class="space-y-2">
-                                <a href="./concepts-of-cybersecurity.html"><li class="text-lg font-medium">Concepts</li></a>
+                                <a href="./concepts-of-cybersecurity.html"><li class="text-lg font-medium">Concepts of Cybersecurity</li></a>
                                 <li>
                                     <ul class="">
                                         <li class="text-gray-300 hover:bg-[#171c57] ease duration-200 py-1 px-4 rounded">
@@ -94,7 +96,7 @@
     
                         <li class="px-4">
                             <ul class="space-y-2">
-                                <a href="./types-of-vulnerability.html"><li class="text-lg font-medium">Vulnerabilities</li></a>
+                                <a href="./types-of-vulnerability.html"><li class="text-lg font-medium">Types of Vulnerabilities</li></a>
                                 <li>
                                     <ul class="">
                                         <li class="text-gray-300 hover:bg-[#171c57] ease duration-200 py-1 px-4 rounded">
@@ -214,7 +216,7 @@
     
                         <li class="px-4">
                             <ul class="space-y-2">
-                                <a href="./companies-affected.html"><li class="text-lg font-medium">Companies Affected</li></a>
+                                <a href="./companies-affected.html"><li class="text-lg font-medium">Cyber-Affected Stakeholders</li></a>
                                 <li>
                                     <ul class="">
                                         <li class="text-gray-300 hover:bg-[#171c57] ease duration-200 py-1 px-4 rounded">
@@ -282,6 +284,8 @@
                         </li>                        
                     </ul>
                 </div>
+                <!-- END OF SIDE BAR -->
+
             </nav>
 
 			<div class="grid md:grid-cols-2 grid-cols-1 max-w-7xl mx-auto mt-8">
